# ak_automation_frappe

./: .gitignore  README.md  dump.rdb  pyproject.toml
ak_automation/: hooks.py
ak_automation/api/: automation.py
ak_automation/automation_ak/doctype/ak_automation/: ak_automation.js  ak_automation.json  ak_automation.py  test_ak_automation.py
ak_automation/automation_ak/doctype/ak_automation_action/: ak_automation_action.json
ak_automation/automation_ak/doctype/ak_automation_condition/: ak_automation_condition.json
ak_automation/automation_ak/doctype/ak_automation_settings/: ak_automation_settings.js  ak_automation_settings.json
ak_automation/automation_ak/doctype/ak_field_update/: ak_field_update.json
ak_automation/automation_ak/workspace/automation_ak/: automation_ak.json
ak_automation/dispatcher/: engine.py
ak_automation/dispatcher/actions/: __init__.py  update_fields.py
ak_automation/dispatcher/tests/: test_actions.py  test_conditions_extended.py  test_engine.py  test_formula_extended.py
ak_automation/public/css/: automation_ak.css
ak_automation/tests/: test_automation_api.py
