[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_automation"
authors = [
    { name = "AK" }
]
description = "Automation engine for Frappe — trigger actions on document events, cron, and macros"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

dependencies = [
    "requests",
    "croniter",
]

[project.optional-dependencies]
twilio = ["twilio"]

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
