[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ak_automation"
authors = [
    { name = "AK", email = "advait.k@swajal.in" }
]
description = "Visual automation configuration app for Frappe — define triggers, conditions, and actions without runtime dispatch"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dynamic = ["version"]

[tool.flit.module]
name = "ak_automation"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<17.0.0"
